# sinbad-the-sailor

./: CHANGELOG.md  README.md  sinbad-the-sailor.cabal
doc/: README.md
src/: sinbadthesailor.hs
