cabal-version:      2.4
name:               sinbad-the-sailor
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Implementation for the sinbad the sailor programming challenge

-- A longer description of the package.
-- description: Implementation for the sinbad the sailor programming challenge

-- A URL where users can report bugs.
-- bug-reports: https://github.com/mvantriet/sinbad-the-sailor/issues

-- The license under which the package is released.
-- license: MIT
author:             Marnix van 't Riet
maintainer:         marnix.vantriet@bbc.co.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sinbad-the-sailor
    main-is:          sinbadthesailor.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
